--- a/shop_docker/Dockerfile
+++ b/shop_docker/Dockerfile
@@ -7,6 +7,6 @@ RUN pip install -r req.txt
 
 COPY . /shop_docker/shop_docker
 
-EXPOSE 8000
-CMD [ "python", "manage.py", "runserver", "0.0.0.1:80" ]
+#EXPOSE 8000
+#CMD [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
 
