--- a/shop_docker/docker-compose.yml
+++ b/shop_docker/docker-compose.yml
@@ -2,34 +2,28 @@ version: '3.1'
 
 services:
 
-  db:
-    image: postgres
-    restart: always
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: v1
+  postgres:
+        image: postgres:alpine
+        restart: always
+        expose:
+          - 5432
+        volumes:
+          - "./init/postgres:/docker-entrypoint-initdb.d"
+          - "./data/postgres_data:/var/lib/postgresql/data"
 
-  adminer:
-    image: adminer
-    restart: always
+  web:
+    build: .
+    command:
+      - . :shop_docker/shop_docker/manage.py runserver 0.0.0.0:8000
+    volumes:
+      - . shop_docker/shop_docker
     ports:
-      - "8000:8000"
+      - 8000:8000
+    depends_on:
+      - postgres
 
-
-
-
-
-
-#  postgres:
-#      image: postgres:alpine
-#      restart: always
-#      expose:
-#        - 5432
-#      volumes:
-#        - "./init/postgres:/docker-entrypoint-initdb.d"
-#        - "./data/postgres_data:/var/lib/postgresql/data"
-#      environment:
-#        POSTGRES_DB:       postgres
-#        POSTGRES_USER:     postgres
-#        POSTGRES_PASSWORD: v1
+  POSTGRES_DB: 'postgres',
+  POSTGRES_USER: 'postgres',
+  POSTGRES_PASSWORD: '12345',
+volumes:
+  postgres:
