--- a/shop/Dockerfile
+++ b/shop/Dockerfile
@@ -1,8 +1,12 @@
 FROM python:3.9
 
 WORKDIR . /app
-COPY . .
+
+COPY requirement.txt .
+
 RUN pip install -r requirement.txt
+COPY . .
+
 
 EXPOSE 8000
 CMD ["python", "manage.py", "runserver", "0.0.0.0:3000"]
